Be sure to config_cfattach_attach() in dmattach(). Loosely based on patch from Brian Brombacher, with other inspriation from vnd(4).

This should fix PR kern/42799.

While here, a few prototype, style and namespace pollution-related changes.